# robowbc

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  STATUS.md  book.toml  deny.toml  pyproject.toml
.github/workflows/: ci.yml  license.yml  publish.yml
.planning/: CONTEXT.md  MILESTONES.md  PLAN-mujoco-official-parity.md  PLAN-showcase-remaining-parity.md  PLAN.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-ROADMAP.md
LICENSES/: BSD-3-Clause.txt  EPL-2.0.txt  README.md  crossterm-MIT.txt  cyclonedds-BSD-3-Clause.txt  cyclonedds-EPL-2.0.txt  cyclors-Apache-2.0.txt  epaint_default_fonts-OFL-1.1.txt  epaint_default_fonts-Ubuntu-font-1.0.txt  nvidia-open-model-license.txt  ort-Apache-2.0.txt  ort-MIT.txt  rerun-Apache-2.0.txt  rerun-MIT.txt  unitree_sdk2-BSD-3-Clause.txt
benchmarks/nvidia/: README.md  cases.json
configs/: README.md  bfm_zero_g1.toml  decoupled_g1.toml  decoupled_h1.toml  decoupled_smoke.toml  hover_h1.toml  sonic_g1.toml  wbc_agile_g1.toml  wbc_agile_t1.toml  wholebody_vla_x2.toml
configs/demo/: gear_sonic_keyboard_mujoco.toml
configs/robots/: agibot_x2.toml  booster_t1.toml  unitree_g1.toml  unitree_g1_35dof.toml  unitree_g1_35dof_wbc_agile.toml  unitree_g1_bfm_zero.toml  unitree_g1_decoupled_wbc.toml  unitree_g1_gear_sonic.toml  unitree_g1_mock.toml  unitree_h1.toml
configs/showcase/: bfm_zero_mock.toml  decoupled_wbc_mock.toml  decoupled_wbc_real.toml  gear_sonic_real.toml  gear_sonic_tracking_real.toml  hover_mock.toml  wbc_agile_mock.toml  wbc_agile_real.toml
configs/teleop/: keymap.toml
crates/robowbc-cli/: Cargo.toml
crates/robowbc-cli/src/: main.rs
crates/robowbc-comm/: Cargo.toml
crates/robowbc-comm/benches/: control_loop.rs
crates/robowbc-comm/src/: lib.rs  unitree.rs  wire.rs  zenoh_comm.rs
crates/robowbc-config/: Cargo.toml
crates/robowbc-core/: Cargo.toml
crates/robowbc-ort/: Cargo.toml  build.rs
crates/robowbc-ort/benches/: inference.rs
crates/robowbc-ort/src/: bfm_zero.rs  decoupled.rs  hover.rs  lib.rs  wbc_agile.rs  wholebody_vla.rs
crates/robowbc-ort/tests/: latency_p99.rs
crates/robowbc-ort/tests/fixtures/: gen_test_models.py  test_constant_balance.onnx  test_constant_walk.onnx  test_dynamic_identity.onnx  test_identity.onnx  test_relu.onnx
crates/robowbc-py/: Cargo.toml
crates/robowbc-py/examples/: lerobot_adapter.py  manipulation_adapter.py
crates/robowbc-py/src/: lib.rs
crates/robowbc-pyo3/: Cargo.toml  build.rs
crates/robowbc-pyo3/src/: lib.rs
crates/robowbc-pyo3/tests/fixtures/: test_model.py
crates/robowbc-registry/: Cargo.toml
crates/robowbc-runtime/: Cargo.toml
crates/robowbc-runtime/src/: lib.rs
crates/robowbc-sim/: Cargo.toml
crates/robowbc-sim/src/: lib.rs  transport.rs
crates/robowbc-teleop/: Cargo.toml
crates/robowbc-teleop/examples/: keyboard_demo.rs
crates/robowbc-teleop/src/: keyboard.rs  keymap.rs  lib.rs
crates/robowbc-transport/: Cargo.toml
crates/robowbc-transport/examples/: pubsub_g1.rs
crates/robowbc-transport/src/: cyclors_backend.rs  inmem.rs  lib.rs  messages.rs
crates/robowbc-vis/: Cargo.toml
crates/robowbc-vis/src/: lib.rs  robot_scene.rs  visualizer.rs
crates/unitree-hg-idl/: Cargo.toml
crates/unitree-hg-idl/src/: cdr.rs  crc.rs  lib.rs
docker/: keyboard-teleop.compose.yaml
docs/: README.md  SUMMARY.md  adding-a-model.md  adding-a-robot.md  architecture.md  configuration.md  ecosystem-strategy.md  founding-document.md  g1-mjcf-review-2026-04-24.md  getting-started.md  issues.md  python-sdk.md  roadmap-2026-q2.md  roboharness-integration.md  scripts.md  third-party-notices.md
docs/agents/: README.md  architecture.md  domain.md  github-workflow.md  issue-tracker.md  keyboard-demo.md  rust-workflow.md  testing.md
docs/benchmarks/: README.md
docs/community/: academic-engagement.md  awesome-submissions.md  blog-posts.md  groot-wbc-integration.md  lerobot-rfc.md  rust-community.md
docs/human/: README.md
docs/plans/: refactor-book.md  refactor-keyboard-speed-monitor.md  refactor-readme.md  refactor-scripts.md
docs/research/: 2026-05-merged-tech-report.md
examples/: README.md  list_and_switch_policies.sh  run_decoupled_wbc.sh  run_gear_sonic.sh
examples/python/: gear_sonic_inference.py  mujoco_kinematic_pose_session.py  roboharness_backend.py
examples/shell/: list_and_switch_policies.sh  run_decoupled_wbc.sh  run_gear_sonic.sh
policy/g1/: base.yaml
scripts/: README.md  _compat.py  bench_nvidia_decoupled_official.py  bench_nvidia_gear_sonic_official.cpp  bench_nvidia_official.py  bench_nvidia_official.sh  bench_robowbc_compare.py  bench_robowbc_compare.sh  build_site.py  check_mujoco_headless.py  download_bfm_zero_models.sh  download_decoupled_wbc_models.sh  download_gear_sonic_models.sh  download_gear_sonic_reference_motions.sh  download_wbc_agile_models.sh  ensure_mujoco_runtime.py  generate_policy_showcase.py  normalize_nvidia_benchmarks.py  prepare_bfm_zero_assets.py  python_sdk_smoke.py  render_nvidia_benchmark_summary.py  roboharness_report.py  serve_showcase.py  site_browser_smoke.py  validate_site_bundle.py
scripts/benchmarks/: bench_nvidia_official.py  bench_robowbc_compare.py  render_nvidia_benchmark_summary.py
scripts/models/: download_bfm_zero_models.sh  download_decoupled_wbc_models.sh  download_wbc_agile_models.sh
scripts/mujoco/: check_mujoco_headless.py  ensure_mujoco_runtime.py
scripts/reports/: roboharness_report.py
scripts/sdk/: python_sdk_smoke.py
scripts/site/: build_site.py  generate_policy_showcase.py
tests/: README.md  conftest.py  test_nvidia_benchmarks.py  test_policy_showcase.py  test_roboharness_report.py  test_site_browser_smoke.py  test_validate_site_bundle.py
tests/contract/: test_policy_showcase.py  test_roboharness_report.py  test_site_browser_smoke.py  test_validate_site_bundle.py
tests/integration/: test_nvidia_benchmarks.py
(+66 files in other folders)
