[workspace]
members = [
    "crates/robowbc-core",
    "crates/robowbc-ort",
    "crates/robowbc-registry",
    "crates/robowbc-comm",
    "crates/robowbc-sim",
    "crates/robowbc-vis",
    "crates/robowbc-cli",
    "crates/robowbc-pyo3",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["RoboWBC Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
