[workspace]
members = [
    "crates/robowbc-core",
    "crates/robowbc-config",
    "crates/robowbc-ort",
    "crates/robowbc-registry",
    "crates/robowbc-comm",
    "crates/robowbc-sim",
    "crates/robowbc-teleop",
    "crates/robowbc-vis",
    "crates/robowbc-cli",
    "crates/robowbc-pyo3",
    "crates/robowbc-transport",
    "crates/unitree-hg-idl",
]
# robowbc-py is a standalone maturin project excluded from the workspace to
# prevent pyo3 feature-flag conflicts: extension-module (robowbc-py) and
# auto-initialize (robowbc-pyo3) are mutually exclusive in Cargo's feature
# unification model. The python-sdk CI job builds it with `maturin develop`.
exclude = ["crates/robowbc-py"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["RoboWBC Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
