[package]
name = "robowbc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "robowbc"
path = "src/main.rs"

[dependencies]
robowbc-comm = { path = "../robowbc-comm" }
robowbc-core = { path = "../robowbc-core" }
robowbc-ort = { path = "../robowbc-ort" }
robowbc-registry = { path = "../robowbc-registry" }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
ctrlc = "3"
