[package]
name = "robowbc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "robowbc"
path = "src/main.rs"

[features]
default = []
sim = ["dep:robowbc-sim", "robowbc-sim/mujoco"]
sim-auto-download = ["sim", "robowbc-sim/mujoco-auto-download"]
vis = ["dep:robowbc-vis", "robowbc-vis/rerun"]

[dependencies]
robowbc-comm = { path = "../robowbc-comm" }
robowbc-core = { path = "../robowbc-core" }
robowbc-ort = { path = "../robowbc-ort" }
robowbc-registry = { path = "../robowbc-registry" }
robowbc-sim = { path = "../robowbc-sim", optional = true }
robowbc-vis = { path = "../robowbc-vis", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
ctrlc = "3"

[lints]
workspace = true
