[package]
name = "robowbc-ort"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ONNX Runtime inference backend for RoboWBC"

[lib]
path = "src/lib.rs"

[dependencies]
inventory = "0.3"
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = true }
robowbc-core = { path = "../robowbc-core" }
robowbc-registry = { path = "../robowbc-registry" }
serde = { workspace = true }
thiserror = "2"
toml = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference"
harness = false

[lints]
workspace = true
