# robowbc-py is intentionally excluded from the root workspace Cargo.toml to
# avoid pyo3 feature-flag conflicts. Build extension-module artifacts via
# maturin, which sets PYO3_BUILD_EXTENSION_MODULE for wheel builds while still
# allowing `cargo test` to link libpython locally.
[workspace]

[package]
name = "robowbc-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RoboWBC Contributors"]
description = "Python SDK for RoboWBC — PyO3 bindings exposing Registry, Observation, and Policy"

[lib]
name = "robowbc"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
robowbc-comm = { path = "../robowbc-comm" }
robowbc-core = { path = "../robowbc-core" }
robowbc-ort = { path = "../robowbc-ort" }
robowbc-registry = { path = "../robowbc-registry" }
robowbc-sim = { path = "../robowbc-sim", features = ["mujoco-auto-download"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
